# Advent-of-Code-2021

./: Readme.md  pyproject.toml
aoc/: day_01.py  day_01_1.py  day_01_2.py  day_02.py  day_02_1.py  day_02_2.py  day_03.py  day_03_1.py  day_03_2.py  day_04.py  day_04_1.py  day_04_2.py  day_05.py  day_05_1.py  day_05_2.py  day_06.py  day_06_1.py  day_06_2.py  day_07.py  day_07_1.py  day_07_2.py  day_08.py  util.py
tests/: test_day_01.py  test_day_01_1.py  test_day_01_2.py  test_day_02.py  test_day_02_1.py  test_day_02_2.py  test_day_03.py  test_day_03_1.py  test_day_03_2.py  test_day_04.py  test_day_04_1.py  test_day_04_2.py  test_day_05.py  test_day_05_1.py  test_day_05_2.py  test_day_06.py  test_day_06_1.py  test_day_06_2.py  test_day_07.py  test_day_07_1.py  test_day_07_2.py  test_day_08.py
