[tool.poetry]
name = "aoc"
version = "0.1.0"
description = "Advent of Code 2021"
authors = ["Erik Teichmann <kontakt.teichmann@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
more-itertools = "^8.12.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.11b1"

[tool.poetry.scripts]
day_01_1 = "aoc.day_01_1:main"
day_01_2 = "aoc.day_01_2:main"
day_02_1 = "aoc.day_02_1:main"
day_02_2 = "aoc.day_02_2:main"
day_03_1 = "aoc.day_03_1:main"
day_03_2 = "aoc.day_03_2:main"
day_04_1 = "aoc.day_04_1:main"
day_04_2 = "aoc.day_04_2:main"
day_05_1 = "aoc.day_05_1:main"
day_05_2 = "aoc.day_05_2:main"
day_06_1 = "aoc.day_06_1:main"
day_06_2 = "aoc.day_06_2:main"
day_07_1 = "aoc.day_07_1:main"
day_07_2 = "aoc.day_07_2:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
