[tool.poetry]
name = "aoc"
version = "0.1.0"
description = "Advent of Code 2021"
authors = ["Erik Teichmann <kontakt.teichmann@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
more-itertools = "^8.12.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.11b1"

[tool.poetry.scripts]
day_01 = "aoc.day_01:main"
day_02 = "aoc.day_02:main"
day_03 = "aoc.day_03:main"
day_04 = "aoc.day_04:main"
day_05_1 = "aoc.day_05_1:main"
day_05_2 = "aoc.day_05_2:main"
day_06_1 = "aoc.day_06_1:main"
day_06_2 = "aoc.day_06_2:main"
day_07_1 = "aoc.day_07_1:main"
day_07_2 = "aoc.day_07_2:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
